--- a/src/sass/blocks/main-nav.scss
+++ b/src/sass/blocks/main-nav.scss
@@ -142,6 +142,7 @@
         position: absolute;
         top: 100%;
         left: -50%;
+        z-index: 3;
         background-color: #fff;
         box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.15);
         border-radius: 10px;
